--- a/index.html
+++ b/index.html
@@ -7,6 +7,17 @@
         <script src="./script.js" defer></script>
     </head>
     <body>
-        <h1 id = "Hehe">DOM EVENT 1</h1>
+        <h1 id = "Hehe">Click me to start/stop</h1>
+        <div>
+            <p>
+                Testing github page
+            </p>
+            <hr>
+            <h1 >Infinite multiplying table</h1>
+            <button id="button">Click me!</button>
+            <p id="number">0</p>
+        </div>
+        
+        
     </body>
 </html>
